# de-with-rust

./: Makefile
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.github/workflows/templates/: lint.yml  release.yml  rustfmt.yml  tests.yml
learning/: commands.md
learning/c1_w3_practices/add_elem_into_vec/: Cargo.toml
learning/c1_w3_practices/applied_enums/: Cargo.toml
learning/c1_w3_practices/basic_vectors/: Cargo.toml
learning/c1_w3_practices/final_w3_homework/: Cargo.toml
learning/c1_w3_practices/using_enum/: Cargo.toml
learning/c1_w3_practices/using_vector_enum/: Cargo.toml
learning/c1_w4_practices/lib-utils/: Cargo.toml  Makefile
learning/c1_w4_practices/lib_with_cargo/: Cargo.toml
learning/c1_w4_practices/utils_village/: Cargo.toml  README.MD
learning/c1w1_examples/src/: main.rs
learning/c1w1_practices/: Cargo.toml
learning/c1w2_practices/conditionals_with_some/: Cargo.toml
learning/c1w2_practices/excercise_std_input/: Cargo.toml
learning/c1w2_practices/match_expr/: Cargo.toml
learning/c1w2_practices/panic-concept/: Cargo.toml
learning/c1w2_practices/second_example/: Cargo.toml
learning/course_2/: READEME.MD  github-actions-cheetsheet.md
learning/course_2/module-1/russian_troll_tweet_ds/russian-troll-tweets-etl/: Cargo.toml
learning/course_2/module-1/russian_troll_tweet_ds/russian-troll-tweets-etl/src/: error.rs  extract.rs  lib.rs  load.rs  pipeline.rs  schema.rs  scrape.rs  transform.rs
learning/hello_cargo/: Cargo.toml
learning/me-ask-me-find/: trait-rust.md
setup/: setup.md
(+166 files in other folders)
