[package]
name = "russian-troll-tweets-etl"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
derive = "1.0.0"
features = "0.10.0"
futures = "0.3.32"
json = "0.12.4"
neo4rs = "0.8.0"
reqwest = { version = "0.13.2", features = ["json"]}
scraper = "0.26.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
